@@ -1,5 +1,6 @@
 Version 0.9-8 (2011-04-8)
 o Added an MMRA example to HE-examples vignette
+o Added err.label argument to heplot and heplot3d to allow changing the label for the error ellipsoid
 
 Version 0.9-7 (2010-11-4)
  o Added trans.colors() to make colors transparent
